# EmailsApp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  customwidget.cpp  customwidget.h  login_image.qrc  maillHandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  model.h  mydatabase.db  read.me
loadingWidget/: waitingspinnerwidget.cpp
model/: mailhandler.h  maillHandler.h  model.h
widget/: customwidget.cpp  customwidget.h
